TEST_PROGRAMS/INVALID/14/0350_array_type_parens.go
package x

type n [2]([3]int)
